Offline pages : Addressed an ordering issue in DownloadUIAdapter

The ordering of the observer methods causes a difference to the download
homeUI. If not handled correctly, it can cause the offline item to show
indefinite progress forever.

Bug: 769987
Change-Id: Ia7954848bb7f67207eba0e469baea40fb8b8932d
Reviewed-on: https://chromium-review.googlesource.com/691186
Reviewed-by: Filip Gorski <fgorski@chromium.org>
Commit-Queue: Shakti Sahu <shaktisahu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505750}
Former-commit-id: d99531262bf0b19622e981791ab2d7d0b2511f39